--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 node_modules
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# next.js
+.next/
+out/
+build/
+dist/
